# RBF-Safe

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  release_benchmark.cpp
cmake/: RBFSafeConfig.cmake.in
data/: api_surface_v1.sha256  api_surface_v2.sha256  api_surface_v3.sha256  empty_scene.json  planar_2r.json  trajectory_2r.json
data/artifact_attestation_schema1/: attestation.json
data/atlas_schema1/: certificates.json  manifest.json
data/fleet_schedule_archive_schema1/: manifest.json  schedules.json
data/golden/: legacy_geometry_v1.json
data/policy_calibration_profile_schema1/: profile.json
data/release-fixtures/: cases.tsv  logical_digest.txt  manifest.json
data/release-fixtures/robots/: franka.json  iiwa14.json  panda.json  ur5.json
data/release-fixtures/scenes/: clutter.json  industrial_cell.json  mobile_manipulation.json  shelf.json
data/robots/: legacy_iiwa14.json  legacy_planar_2r.json  legacy_ur5.json
data/safety_memory_schema1/: manifest.json  memory.json
data/safety_memory_store_schema1/: manifest.json
data/safety_memory_store_schema1/commits/: 00000000000000000000-033a8a61cc33066599d49f31c377540537b011ae1ab8963a2640d6c9743a483e.json  00000000000000000001-1c361b8f1434e63f4a3e0f872a28db418bb208aa3fa4f0d63429d1997d4edc29.json
data/safety_memory_store_schema1/revisions/033a8a61cc33066599d49f31c377540537b011ae1ab8963a2640d6c9743a483e/: manifest.json  memory.json
data/safety_memory_store_schema1/revisions/1c361b8f1434e63f4a3e0f872a28db418bb208aa3fa4f0d63429d1997d4edc29/: manifest.json  memory.json
docs/: api-stability.md  api.md  architecture.md  artifact-attestation.md  atlas-format.md  corridor-format.md  corridors.md  dynamic-updates.md  fleet-schedule-archive.md  getting-started.md  input-formats.md  installation.md  migration-map.md  moveit2.md  ompl-adapter.md  optimization.md  planning-consumers.md  policy-calibration.md  policy-feedback-format.md  policy-safety.md  provenance.md  region-database-format.md  region-database.md  release-fixtures.md  releasing.md  roadmap.md  runtime-shield.md  safe-ik.md  safety-memory-format.md  safety-memory-store.md  safety-memory.md  safety-model.md  schema-migrations.md  trajectory-auditor.md  versioning.md  vision.md
examples/: artifact_attestation_quickstart.cpp  artifact_attestation_quickstart.py  calibrated_policy_quickstart.cpp  calibrated_policy_quickstart.py  dynamic_update_quickstart.cpp  fleet_schedule_archive_quickstart.cpp  fleet_schedule_archive_quickstart.py  hipac_quickstart.cpp  ompl_quickstart.cpp  optimization_quickstart.cpp  planning_quickstart.cpp  policy_safety_quickstart.cpp  policy_safety_quickstart.py  quickstart.cpp  region_database_quickstart.cpp  safe_ik_quickstart.cpp  safety_memory_quickstart.cpp  safety_memory_quickstart.py  safety_memory_store_quickstart.cpp  safety_memory_store_quickstart.py  shield_quickstart.cpp
include/rbfsafe/: atlas.h  calibration.h  certificate.h  corridor.h  dynamic.h  geometry.h  higher_order.h  lect.h  memory.h  model.h  ompl.h  optimization.h  planning.h  policy.h  rbfsafe.h  region_database.h  result.h  safe_ik.h  scene_delta.h  shield.h  trajectory.h  trust.h  types.h  version.h
plugins/moveit2/rbfsafe_moveit/: CMakeLists.txt  README.md  package.xml  rbfsafe_moveit_plugins.xml
plugins/moveit2/rbfsafe_moveit/config/: rbfsafe_plugins.yaml
plugins/moveit2/rbfsafe_moveit/include/rbfsafe_moveit/: plugin_resources.hpp
plugins/moveit2/rbfsafe_moveit/src/: certified_constraint_sampler.cpp  planning_adapters.cpp  plugin_resources.cpp  safe_ik_kinematics_plugin.cpp
plugins/moveit2/rbfsafe_moveit/test/: test_plugin_loader.cpp
python/: binding_support.h  bindings.cpp  bindings_calibration.cpp  bindings_memory.cpp  bindings_policy.cpp  bindings_trust.cpp
python/rbfsafe/: __init__.py  cli.py  visualize.py
src/: atlas.cpp  atlas_identity.cpp  calibration.cpp  certificate.cpp  corridor.cpp  corridor_persistence.cpp  dynamic.cpp  fleet_schedule_archive.cpp  fleet_schedule_persistence.cpp  geometry.cpp  higher_order.cpp  json.cpp  lect.cpp  memory.cpp  memory_persistence.cpp  memory_store.cpp  model.cpp  ompl.cpp  optimization.cpp  persistence.cpp  planning.cpp  policy.cpp  policy_persistence.cpp  portal.cpp  region_database.cpp  region_database_persistence.cpp  region_identity.cpp  region_index.cpp  safe_ik.cpp  scene_delta.cpp  sha256.cpp  shield.cpp  trajectory.cpp  trust.cpp  version_store.cpp
src/internal/: atlas_identity.h  binary.h  certificate_utils.h  json.h  lect_codec.h  memory.h  policy.h  region_identity.h  region_index.h  scene_delta_utils.h  sha256.h
tests/: CMakeLists.txt  test_atlas.cpp  test_calibration.cpp  test_dynamic.cpp  test_geometry.cpp  test_golden.cpp  test_higher_order.cpp  test_hipac.cpp  test_internal.cpp  test_lect.cpp  test_memory.cpp  test_obb.cpp  test_ompl.cpp  test_optimization.cpp  test_persistence.cpp  test_planning.cpp  test_policy.cpp  test_python.py  test_region_database.cpp  test_region_index.cpp  test_safe_ik.cpp  test_shield.cpp  test_support.h  test_trajectory.cpp  test_trust.cpp
tests/consumer/: CMakeLists.txt  main.cpp
tests/consumer_ompl/: CMakeLists.txt  main.cpp
tools/: check_api_surface.py  inspect.cpp
