function(rbfsafe_add_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE RBFSafe::rbfsafe)
    target_compile_definitions(${name} PRIVATE RBFSAFE_TEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../data")
    rbfsafe_configure_target(${name})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

rbfsafe_add_test(rbfsafe_test_geometry test_geometry.cpp)
rbfsafe_add_test(rbfsafe_test_golden test_golden.cpp)
target_include_directories(rbfsafe_test_golden PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_add_test(rbfsafe_test_lect test_lect.cpp)
rbfsafe_add_test(rbfsafe_test_atlas test_atlas.cpp)
rbfsafe_add_test(rbfsafe_test_persistence test_persistence.cpp)

add_executable(rbfsafe_test_internal test_internal.cpp)
target_link_libraries(rbfsafe_test_internal PRIVATE RBFSafe::geometry)
target_include_directories(rbfsafe_test_internal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_configure_target(rbfsafe_test_internal)
add_test(NAME rbfsafe_test_internal COMMAND rbfsafe_test_internal)
