function(rbfsafe_add_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE RBFSafe::rbfsafe)
    target_compile_definitions(${name} PRIVATE RBFSAFE_TEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../data")
    rbfsafe_configure_target(${name})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

rbfsafe_add_test(rbfsafe_test_geometry test_geometry.cpp)
rbfsafe_add_test(rbfsafe_test_golden test_golden.cpp)
target_include_directories(rbfsafe_test_golden PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_add_test(rbfsafe_test_lect test_lect.cpp)
rbfsafe_add_test(rbfsafe_test_atlas test_atlas.cpp)
rbfsafe_add_test(rbfsafe_test_trajectory test_trajectory.cpp)
rbfsafe_add_test(rbfsafe_test_persistence test_persistence.cpp)
rbfsafe_add_test(rbfsafe_test_obb test_obb.cpp)
rbfsafe_add_test(rbfsafe_test_hipac test_hipac.cpp)
target_include_directories(rbfsafe_test_hipac PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_add_test(rbfsafe_test_safe_ik test_safe_ik.cpp)
rbfsafe_add_test(rbfsafe_test_dynamic test_dynamic.cpp)
rbfsafe_add_test(rbfsafe_test_higher_order test_higher_order.cpp)
rbfsafe_add_test(rbfsafe_test_region_database test_region_database.cpp)
rbfsafe_add_test(rbfsafe_test_planning test_planning.cpp)
rbfsafe_add_test(rbfsafe_test_optimization test_optimization.cpp)
rbfsafe_add_test(rbfsafe_test_shield test_shield.cpp)
rbfsafe_add_test(rbfsafe_test_policy test_policy.cpp)
rbfsafe_add_test(rbfsafe_test_memory test_memory.cpp)
target_include_directories(rbfsafe_test_memory PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)

if(RBFSAFE_BUILD_OMPL)
    add_executable(rbfsafe_test_ompl test_ompl.cpp)
    target_link_libraries(rbfsafe_test_ompl PRIVATE RBFSafe::ompl)
    rbfsafe_configure_target(rbfsafe_test_ompl)
    add_test(NAME rbfsafe_test_ompl COMMAND rbfsafe_test_ompl)
endif()

add_executable(rbfsafe_test_internal test_internal.cpp)
target_link_libraries(rbfsafe_test_internal PRIVATE RBFSafe::geometry)
target_include_directories(rbfsafe_test_internal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_configure_target(rbfsafe_test_internal)
add_test(NAME rbfsafe_test_internal COMMAND rbfsafe_test_internal)

add_executable(rbfsafe_test_region_index test_region_index.cpp)
target_link_libraries(rbfsafe_test_region_index PRIVATE RBFSafe::atlas)
target_include_directories(rbfsafe_test_region_index PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
rbfsafe_configure_target(rbfsafe_test_region_index)
add_test(NAME rbfsafe_test_region_index COMMAND rbfsafe_test_region_index)
