<?xml version="1.0"?>
<package format="3">
  <name>rbfsafe_moveit</name>
  <version>0.5.0</version>
  <description>Fail-closed MoveIt 2 adapters and Safe IK plugin for RBF-Safe.</description>
  <maintainer email="tianyu1997@users.noreply.github.com">Tianyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>srdfdom</test_depend>
  <test_depend>urdfdom</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
